# docker_python

./: BUILD.bazel  WORKSPACE  requirements_lock.txt
