load("@io_bazel_rules_docker//python3:image.bzl", "py3_image")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("@pypi//:requirements.bzl", "requirement")

py3_image(
    name = "main",
    srcs = ["main.py"],
    deps = [
        requirement("grpcio"),
    ]
)

compile_pip_requirements(
    name = "requirements",
    extra_args = ["--allow-unsafe"],
    requirements_in = "requirements.in",
    requirements_txt = "requirements_lock.txt",
)